Bug 110737 - No animations on gtk3 with two screens connected
Summary: No animations on gtk3 with two screens connected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.2
Keywords:
Depends on:
Blocks: GTK3 Multimonitor
  Show dependency treegraph
 
Reported: 2017-07-31 18:45 UTC by Lachabe
Modified: 2017-09-08 12:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lachabe 2017-07-31 18:45:06 UTC
Hello,

I'm on Ubuntu 17.04 up to date.

I have an issue when the package libreoffice-gtk3 is installed.
All the animation don't work when I have 2 screen connected on my computer.

I hope the following information can help you :


(about box)
Version: 5.4.0.3
Build ID: 1:5.4.0~rc3-0ubuntu0.17.04.1~lo0
Threads CPU : 8; OS : Linux 4.10; UI Render : par défaut; VCL : gtk3;
Locale : fr-FR (fr_FR.UTF-8); Calc: group

regards

Lachabe
Comment 1 Arnaud Versini 2017-07-31 18:53:41 UTC
Confirmed on openSUSE with gnome 3 and Intel® Haswell Mobile.

Steps to reproduce :
- create a presentation with a custom animation on an object,
- connect a second screen,
- launch the presentation,

Expected :
- an animation as requested

Result :
- no animation when we connect the second screen.

Version: 5.4.0.3
Build ID: 40m0(Build:3)
CPU threads: 4; OS: Linux 4.11; UI render: default; VCL: gtk3; 
Locale: fr-FR (fr_FR.UTF-8); Calc: group
Comment 2 Caolán McNamara 2017-09-06 08:31:50 UTC
This seems to be working in master but not earlier versions, and seems to have started working due to idle/timer/scheduler changes, so something of that nature doesn't work right in earlier versions. Moving the mouse onto the presentation screen seems to make the animation play so maybe the start of the animation timer depends on some events arriving the kick off the animation and that isn't happening pre scheduler changes
Comment 3 Commit Notification 2017-09-08 08:32:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ca0f91b02822a5c0b28a651f82821cd11d9f6ed

tdf#110737 set user-events to a lower priority than system redraw

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2017-09-08 08:49:13 UTC
This works for me, backport to 5-4 in gerrit
Comment 5 Commit Notification 2017-09-08 12:53:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=64c51f83fde713c7887fee608e35d6fb7492a064&h=libreoffice-5-4

tdf#110737 set user-events to a lower priority than system redraw

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.