tdf#110737 set user-events to a lower priority than system redraw

Change-Id: Ic6672fcce4cb5516d388fee22120383ccc70a4a5
Reviewed-on: https://gerrit.libreoffice.org/42067
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>